@@ -1,3 +1,10 @@
+2010-03-28  Pedro Alves  <pedro@codesourcery.com>
+
+	* gdb.trace/while-dyn.exp (executable): New variable.
+	(binfile): Use it.
+	(test_while_stepping): New function.  Move most tests here.  Call
+	it once for each of the while-stepping, stepping and ws aliases.
+
 2010-03-26  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
 
 	* gdb.cp/inherit.exp (test_ptype_si): XFAIL test for GCC versions
