@@ -1,3 +1,7 @@
+2010-03-28  Pedro Alves  <pedro@codesourcery.com>
+
+        * cli/cli-script.c (process_next_line): Handle 'stepping'.
+
 2010-03-26  Stan Shebs  <stan@codesourcery.com>
 
 	* tracepoint.c (disconnect_or_stop_tracing): Get out of tfind mode.
